@@ -6,7 +6,6 @@ TODO list for s3cmd project
     (at the moment it'll always download).
   - Enable --exclude for [del], [setacl], [ls].
   - Enable --dry-run for [del], [setacl], reject for all others.
-  - Recursive cp/mv on remote "folders".
   - Allow change /tmp to somewhere else
   - With --guess-mime use 'magic' module if available.
   - Support --preserve for [put] and [get]. Update manpage.
